[project]
name = "market-data-lakehouse-orchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "joaobarreto27",email = "joao.vito1951@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pip-audit (>=2.10.0,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "requests (>=2.32.5,<3.0.0)",
    "types-requests (>=2.32.4.20260107,<3.0.0.0)",
    "pyspark (>=4.1.1,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pandera (>=0.28.1,<0.29.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pandas-stubs (>=2.3.3.260113,<3.0.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
